<resources>
    <string name="app_name">📰 Turkey24</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="license">Yunus Emre Ak ~ Asmaa Mirkhan \n The Appache License 2.0</string>
    <string name="splash_title">Turkey 24</string>
    <string name="open_nav">Aç</string>
    <string name="close_nav">Kapat</string>
    <string name="show_in_web">Haberin tamamını oku</string>
    <string name="your_news">🎈 Haberleriniz</string>
    <string name="saved_news">💾 Kaydedilenler</string>
    <string name="liked_news">❤ Beğenilenler</string>
    <string name="custom_news">Size Özel</string>
    <string name="world_news">Dünya Haberleri</string>
    <string name="middle_east">🌍 Orta Doğu</string>
    <string name="usa">🌎 ABD</string>
    <string name="europe">🌏 Avrupa</string>
    <string name="australia">🌏 Avustralya</string>
    <string name="asia">🌏 Asya</string>
    <string name="category">Kategori</string>
    <string name="all">💫 Hepsi</string>
    <string name="science">🔬 Bilim</string>
    <string name="health">🍀 Sağlık</string>
    <string name="technology">🚀 Teknoloji</string>
    <string name="business">👜 İşletme</string>
    <string name="entertainment">🎪 Eğlence</string>
    <string name="sport">🏀 Spor</string>
</resources>
